fixing size issues on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,14 +3,14 @@
   padding: 0;
 }
 body {
-        padding: 2em;
+        padding: 1em;
         font-family: 'Georgia', serif;
-        font-size: 16px;
+        font-size: 20px;
         text-align: left;
-        max-width: 380px;
+        max-width: 768px;
       }
 img {
-  max-width: 380px;
+  max-width: 768px;
   width: 100%;
   margin-bottom: 1em;
 }
